@@ -20,7 +20,7 @@
 <TD VALIGN="TOP" BGCOLOR="#FFFFFF">
 <FONT SIZE="5"><STRONG>Download:</STRONG></FONT><BR>
 <UL><A HREF="http://sourceforge.net/project/showfiles.php?group_id=67789">iTerm 0.8.2</A>: The latest iTerm release<BR>
-<A HREF="http://iterm.sourceforge.net/iTerm-latest-cvs.zip">Recent binary build from CVS</A> (0.9.0 Pre-release, English only, 9/22/2006)<IMG src="new.gif"><BR>
+<A HREF="http://iterm.sourceforge.net/iTerm-latest-cvs.zip">Recent binary build from CVS</A> (0.9.0 Pre-release, English only, 9/23/2006)<IMG src="new.gif"><BR>
 This build is Tiger only. We will have pre-Tiger versions when we do a formal release.
 </UL>
 
